# janus-signalling-proxy

./: CMakeLists.txt  README.md
Agent/: Agent.cpp  Agent.h  AgentConfig.cpp  AgentConfig.h  CMakeLists.txt
AgentApp/: CMakeLists.txt  janus-signalling-agent.conf  main.cpp
Common/: Base62.cpp  Base62.h  CMakeLists.txt  ConfigHelpers.cpp  ConfigHelpers.h
Proxy/: CMakeLists.txt  MessageBuffer.cpp  Proxy.cpp  Proxy.h  ProxyConfig.cpp  ProxyConfig.h
ProxyApp/: CMakeLists.txt  janus-signalling-proxy.conf  main.cpp
Test/: CMakeLists.txt  main.cpp
snap/: snapcraft.yaml
